Implement business logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,51 +1,6 @@
-<!-- <h3>Object as DataSource</h3>
-<dx-data-grid
-  [dataSource]="employees"
-  keyExpr="id"
-  class="grid"
-  [showBorders]="true"
-  (onRowInserting)="insertRow($event)"
-  (onRowUpdating)="updateRow($event)"
->
-  <dxi-column dataField="firstName" [width]="200">
-    <dxi-validation-rule
-      type="custom"
-      [reevaluate]="true"
-      message="Fisrt Name can't be empty when Last Name is specified"
-      [validationCallback]="customCallback"
-    ></dxi-validation-rule>
-  </dxi-column>
-  <dxi-column dataField="lastName" [width]="200"> </dxi-column>
-  <dxo-editing
-    mode="popup"
-    [allowUpdating]="true"
-    [allowDeleting]="true"
-    [allowAdding]="true"
-  ></dxo-editing>
-</dx-data-grid>
-<br /> -->
-<h3>ArrayStore as DataSource</h3>
-<dx-data-grid
-  [dataSource]="store"
-  keyExpr="id"
-  class="grid"
-  [showBorders]="true"
-  (onRowInserting)="insertRow($event)"
-  (onRowUpdating)="updateRow($event)"
->
-  <dxi-column dataField="firstName" [width]="200">
-    <dxi-validation-rule
-      type="custom"
-      [reevaluate]="true"
-      message="Fisrt Name can't be empty when Last Name is specified"
-      [validationCallback]="customCallback"
-    ></dxi-validation-rule>
-  </dxi-column>
-  <dxi-column dataField="lastName" [width]="200"> </dxi-column>
-  <dxo-editing
-    mode="popup"
-    [allowUpdating]="true"
-    [allowDeleting]="true"
-    [allowAdding]="true"
-  ></dxo-editing>
+<dx-data-grid [dataSource]="store" [showBorders]="true">
+  <dxo-master-detail [enabled]="true" template="orders"></dxo-master-detail>
+  <div *dxTemplate="let order of 'orders'">
+    <app-detail-grid [orderId]="order.data.OrderID"></app-detail-grid>
+  </div>
 </dx-data-grid>
